# wxpy-rofi-config

./: .gitignore  .pylintrc  .travis.yml  MANIFEST.in  README.md  raw-refactor.py  setup.cfg  setup.py  tox.ini
tests/: test_launcher.py  test_main_module.py  test_sample.py
tests/config/: test_config_submodule.py  test_entry.py  test_rofi.py
tests/gui/: test_config_app.py  test_config_frame.py  test_config_frame_menu_bar.py  test_config_frame_status_bar.py  test_config_page.py  test_fitted_static_text.py  test_gui_submodule.py  test_hidable_auto_wrap_static_test.py  test_modi_launcher.py  test_settings_notebook.py  test_settings_panel.py
wxpy_rofi_config/: __init__.py  launcher.py
wxpy_rofi_config/config/: __init__.py  entry.py  rofi.py
wxpy_rofi_config/gui/: __init__.py  config_app.py  config_frame.py  config_frame_menu_bar.py  config_frame_status_bar.py  config_page.py  fitted_static_text.py  hidable_auto_wrap_static_test.py  modi_launcher.py  settings_notebook.py  settings_panel.py
