[metadata]
author = CJ Harries
author_email = cj@wizardsoftheweb.pro
license_file = LICENSE

[bdist_wheel]
universal = 1

[options]
install_requires =
    wxPython
tests_require =
    mock
    coverage
    pytest
    pytest-cov

[tool:pytest]
addopts = -v -x --cov-report html --cov-report term --cov=wotw_x11_comparison --color=yes
