[metadata]
author = CJ Harries
author_email = cj@wizardsoftheweb.pro
license_file = LICENSE

[bdist_wheel]
universal = 1

[options]
install_requires =
    wxPython
    pytest-runner
tests_require =
    mock
    coverage
    pytest
    pytest-cov

[tool:pytest]
addopts = -v -x --cov-report html --cov-report term --cov=wxpy_rofi_config --color=yes

[aliases]
test=pytest
